--- a/Files/mozilla.cfg
+++ b/Files/mozilla.cfg
@@ -36,7 +36,11 @@ pref("datareporting.healthreport.service.enabled", false);
 pref("datareporting.healthreport.uploadEnabled", false);
 pref("datareporting.policy.dataSubmissionEnabled", false);
 pref("dom.battery.enabled", false);
+pref("dom.disable_window_flip", true);
+pref("dom.disable_window_move_resize", true);
+pref("dom.disable_window_open_feature.status", true);
 pref("dom.event.clipboardevents.enabled", false);
+pref("dom.event.contextmenu.enabled", false);
 pref("dom.webaudio.enabled", false);
 pref("experiments.activeExperiment", false);
 pref("experiments.enabled", false);
@@ -72,6 +76,7 @@ pref("network.http.referer.XOriginPolicy", 2);
 pref("network.http.referer.XOriginTrimmingPolicy", 2);
 pref("network.http.speculative-parallel-limit", 0);
 pref("network.prefetch-next", false);
+pref("network.protocol-handler.external.shell",false);
 pref("network.trr.mode", 5);
 pref("privacy.donottrackheader.enabled", true);
 pref("privacy.donottrackheader.value", 1);
