--- a/Files/mozilla.cfg
+++ b/Files/mozilla.cfg
@@ -1,6 +1,9 @@
 // IMPORTANT: Start your code on the 2nd line
+lockPref("devtools.policy.disabled", false);
+lockPref("general.aboutConfig.enable", true);
 pref("app.normandy.api_url", "");
 pref("app.normandy.enabled", false);
+pref("app.normandy.user_id", "");
 pref("app.shield.optoutstudies.enabled", false);
 pref("app.update.auto", false);
 pref("beacon.enabled", false);
@@ -23,14 +26,17 @@ pref("browser.safebrowsing.downloads.remote.url", "");
 pref("browser.safebrowsing.enabled", false);
 pref("browser.safebrowsing.malware.enabled", false);
 pref("browser.safebrowsing.phishing.enabled", false);
-pref("browser.search.suggest.enabled", false);
+pref("browser.search.suggest.enabled", true);
 pref("browser.selfsupport.url", "");
 pref("browser.send_pings", false);
 pref("browser.sessionstore.privacy_level", 2);
 pref("browser.shell.checkDefaultBrowser", false);
 pref("browser.startup.homepage_override.mstone", "ignore");
 pref("browser.tabs.crashReporting.sendReport", false);
-pref("browser.urlbar.speculativeConnect.enabled", false);
+pref("browser.urlbar.placeholderName", "DuckDuckGo");
+pref("browser.urlbar.placeholderName.private", "DuckDuckGo");
+pref("browser.urlbar.suggest.openpage", true);
+pref("browser.urlbar.speculativeConnect.enabled", true);
 pref("browser.urlbar.trimURLs", false);
 pref("datareporting.healthreport.service.enabled", false);
 pref("datareporting.healthreport.uploadEnabled", false);
@@ -47,6 +53,7 @@ pref("experiments.enabled", false);
 pref("experiments.manifest.uri", "");
 pref("experiments.supported", false);
 pref("extensions.CanvasBlocker@kkapsner.de.whiteList", "");
+pref("extensions.activeThemeID", "firefox-compact-dark@mozilla.org");
 pref("extensions.autoDisableScopes", 14);
 pref("extensions.getAddons.cache.enabled", false);
 pref("extensions.getAddons.showPane", false);
@@ -71,9 +78,9 @@ pref("network.allow-experiments", false);
 pref("network.captive-portal-service.enabled", false);
 pref("network.cookie.cookieBehavior", 1);
 pref("network.dns.disablePrefetch", true);
-pref("network.http.referer.spoofSource", true);
 pref("network.http.referer.XOriginPolicy", 2);
 pref("network.http.referer.XOriginTrimmingPolicy", 2);
+pref("network.http.referer.spoofSource", true);
 pref("network.http.speculative-parallel-limit", 0);
 pref("network.prefetch-next", false);
 pref("network.protocol-handler.external.shell",false);
@@ -82,12 +89,19 @@ pref("privacy.donottrackheader.enabled", true);
 pref("privacy.donottrackheader.value", 1);
 pref("privacy.firstparty.isolate", true);
 pref("privacy.resistFingerprinting", true);
-pref("privacy.trackingprotection.enabled", true);
-pref("privacy.trackingprotection.pbmode.enabled", true);
-pref("privacy.trackingprotection.fingerprinting.enabled", true);
 pref("privacy.trackingprotection.cryptomining.enabled", true);
+pref("privacy.trackingprotection.enabled", true);
+pref("privacy.trackingprotection.fingerprinting.enabled", true);
+pref("privacy.trackingprotection.pbmode.enabled", true);
 pref("privacy.usercontext.about_newtab_segregation.enabled", true);
 pref("security.ssl.disable_session_identifiers", true);
+pref("services.sync.declinedEngines", "passwords,tabs,forms,history");
+pref("services.sync.engine.creditcards", false);
+pref("services.sync.engine.creditcards.available", false);
+pref("services.sync.engine.history", false);
+pref("services.sync.engine.passwords", false);
+pref("services.sync.engine.tabs", false);
+pref("services.sync.engine.prefs", true);
 pref("signon.autofillForms", false);
 pref("toolkit.telemetry.archive.enabled", false);
 pref("toolkit.telemetry.bhrPing.enabled", false);
