Enable Developer Tools

--- a/Files/mozilla.cfg
+++ b/Files/mozilla.cfg
@@ -1,4 +1,5 @@
 // IMPORTANT: Start your code on the 2nd line
+lockPref("devtools.chrome.enabled", false);
 lockPref("devtools.policy.disabled", false);
 lockPref("general.aboutConfig.enable", true);
 pref("app.normandy.api_url", "");
