Relaxed FireFox Sync Policies

--- a/Files/mozilla.cfg
+++ b/Files/mozilla.cfg
@@ -99,9 +99,9 @@ pref("security.ssl.disable_session_identifiers", true);
 pref("services.sync.declinedEngines", "passwords,tabs,forms,history");
 pref("services.sync.engine.creditcards", false);
 pref("services.sync.engine.creditcards.available", false);
-pref("services.sync.engine.history", false);
+pref("services.sync.engine.history", true);
 pref("services.sync.engine.passwords", false);
-pref("services.sync.engine.tabs", false);
+pref("services.sync.engine.tabs", true);
 pref("services.sync.engine.prefs", true);
 pref("signon.autofillForms", false);
 pref("toolkit.telemetry.archive.enabled", false);
