Disable Speculative Connect

--- a/Files/mozilla.cfg
+++ b/Files/mozilla.cfg
@@ -37,7 +37,7 @@ pref("browser.tabs.crashReporting.sendReport", false);
 pref("browser.urlbar.placeholderName", "DuckDuckGo");
 pref("browser.urlbar.placeholderName.private", "DuckDuckGo");
 pref("browser.urlbar.suggest.openpage", true);
-pref("browser.urlbar.speculativeConnect.enabled", true);
+pref("browser.urlbar.speculativeConnect.enabled", false);
 pref("browser.urlbar.trimURLs", false);
 pref("datareporting.healthreport.service.enabled", false);
 pref("datareporting.healthreport.uploadEnabled", false);
